# memcached

./: .gitignore  .mailmap  .robots.sql  .shipit  .travis.yml  AUTHORS  BUILD  CONTRIBUTING  CONTRIBUTING.md  CONTRIBUTORS  COPYING  ChangeLog  Dockerfile  Doxyfile  Doxyfile-api  Doxyfile.in  HACKING  I_ablage.c  LICENSE  LICENSE.bipbuffer  LICENSE.itoa_ljust  Makefile  Makefile.am  Merged .anti-blockers.txt  NEWS  README  README.md  SECURITY.md  TODO  WE_ARE_USING_SUBVERSION_NOW.txt  ascii_scrub.c  assoc.c  assoc.h  authfile.c  authfile.h  autogen.sh  base64.c  base64.h  basic_engine_testsuite.c  basic_engine_testsuite.h  (+147 more)
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
breakdancer/: breakdancer.py  engine_test.py  suite_stubs.c  suite_stubs.h
config/: Doxyfile-api.in  autorun.sh  version.pl
daemon/: cache.h  daemon.c  isasl.c  isasl.h  linux_priv.c  memcached.c  memcached.h  sasl_defs.c  sasl_defs.h  stats.c  stats.h  thread.c  topkeys.h
devtools/: Dockerfile-proxy.alpine  Dockerfile.alpine  Dockerfile.arch  Dockerfile.debian  Dockerfile.fedora  Dockerfile.ubuntu  bench_noreply.pl  clean-whitespace.pl  slab_loadgen  svn-tarballs.pl
doc/: CONTRIBUTORS  CONTRIBUTORS.txt  Doxyfile  Makefile-xml2rfc  Makefile.am  OSX.txt  binary-protocol-plan-udp.xml  binary-protocol-plan-v2.txt  binary-protocol-plan-v2.xml  binary-protocol-plan.txt  engine-interface.xml  memcached.1  memory_management.txt  napi_ids.txt  new_lru.txt  pluggable-storage.txt  protocol-binary-range.txt  protocol-binary-range.xml  protocol-binary.full  protocol-binary.txt  protocol-binary.xml  protocol.txt  readme.txt  storage.txt  strongcas.txt  threads.txt  tls.txt
doc/xml2rfc/: reference.RFC.0768.xml  reference.RFC.2119.xml  rfc2629-noinc.xsl  rfc2629-other.ent  rfc2629-refchk.xsl  rfc2629-xhtml.ent  rfc2629.dtd
engines/default_engine/: assoc.c  default_engine.c  default_engine.h  items.c  items.h  slabs.c  slabs.h
extensions/: protocol_extension.h
extensions/daemon/: stdin_check.c
extensions/loggers/: blackhole_logger.c  eventlog_logger.c  syslog_logger.c
extensions/protocol/: ascii_scrub.c  example_protocol.c  fragment_rw.c  fragment_rw.h
extstore/: Makefile.am  crc32c.c  extstore.c  extstore.h  extstore_engine.c  extstore_engine.h
include/memcached/: callback.h  config_parser.h  engine.h  engine_common.h  engine_testapp.h  extension.h  extension_loggers.h  genhash.h  mock_server.h  protocol_binary.h  protocol_plugin.h  server_api.h  types.h  util.h  vbucket.h  visibility.h
input/: inputUtilHarness.txt  proxy_jump_hash_input.txt
input_tag4/: goal4_input0.txt  goal4_inputtext
linux-source-5.15.0/: Kconfig  MAINTAINERS  Ubuntu.md  update-dkms-versions  update-version-dkms
linux-source-5.15.0/arch/: Kconfig
linux-source-5.15.0/block/: bdev.c  bfq-cgroup.c  bfq-iosched.c  bio-integrity.c  blk-cgroup.c  blk-core.c  blk-crypto.c  blk-iocost.c  blk-merge.c  blk-mq-sched.c  blk-mq-sysfs.c  blk-mq.c  blk-settings.c  disk-events.c  fops.c  genhd.c  keyslot-manager.c  mq-deadline.c
linux-source-5.15.0/certs/: blacklist.c  common.c
linux-source-5.15.0/crypto/: aegis128-neon-inner.c  algapi.c  crypto_engine.c  drbg.c  rsa-pkcs1pad.c  tcrypt.c
linux-source-5.15.0/fs/: Kconfig  aio.c  attr.c  binfmt_elf_fdpic.c  dcache.c  eventpoll.c  exec.c  fcntl.c  file.c  file_table.c  fs-writeback.c  fs_context.c  inode.c  internal.h  libfs.c  locks.c  namei.c  namespace.c  open.c  read_write.c  shiftfs.c  splice.c  super.c  sync.c  xattr.c
linux-source-5.15.0/init/: Kconfig  do_mounts.c  main.c  version.c
linux-source-5.15.0/io_uring/: io_uring.c
linux-source-5.15.0/ipc/: namespace.c  sem.c
linux-source-5.15.0/kernel/: acct.c  audit.c  audit.h  auditfilter.c  auditsc.c  cpu.c  cred.c  exit.c  fail_function.c  fork.c  kexec_core.c  kexec_file.c  kprobes.c  kthread.c  module.c  module_signing.c  padata.c  panic.c  pid_namespace.c  relay.c  resource.c  signal.c  smp.c  sys.c  sysctl.c  task_work.c  torture.c  user_namespace.c  watch_queue.c  workqueue.c
linux-source-5.15.0/lib/: Kconfig.debug  debugobjects.c  kobject.c  nlattr.c  radix-tree.c  test_firmware.c  test_overflow.c
linux-source-5.15.0/mm/: backing-dev.c  compaction.c  filemap.c  gup.c  huge_memory.c  hugetlb.c  khugepaged.c  ksm.c  memcontrol.c  memfd.c  memory-failure.c  memory.c  memory_hotplug.c  mempolicy.c  migrate.c  mmap.c  mmu_gather.c  nommu.c  (+8 more)
m4/: ax_pthread.m4  ax_restore_flags.m4  ax_save_flags.m4  c99-backport.m4  libevent.m4
output_ilj/: .cur_input  cmdline  fuzzer_setup  plot_data
programs/: engine_testapp.c  mcstat.c  mock_server.c  testapp.c
proxy/: onezone.lua  pooldata.lua  simple.lua
scripts/: README.damemtop  damemtop  damemtop.yaml  mc_slab_mover  memcached-automove  memcached-automove-extstore  memcached-init  memcached-server.upstart  memcached-tool  memcached-tool.1  memcached.service  memcached.sysconfig  memcached.sysv  memcached.upstart  memcached@.service  start-memcached
storage_engine/: logger_engine.h  memcached_engine.h  storage_engine.h  storage_utilities.c  storage_utilities.h
t/: 00-startup.t  64bit.t  README-TLS.md  ascii-auth.t  ascii-auth2.t  authfile  authfile2  binary-extstore.t  binary-get.t  binary-sasl.t  binary-sasl.t.in  binary.t  bogus-commands.t  cacert.pem  cakey.pem  cas.t  cert  chunked-extstore.t  chunked-items.t  client_crt.pem  client_key.pem  close_conn.t  cmd_extensions.t  conn-limits.t  daemonize.t  dash-M.t  delete-window.t  dyn-maxbytes.t  error-extstore.t  evictions.t  expirations.t  expired_crt.pem  expired_key.pem  extstore-buckets.t  extstore-cas.t  extstore-jbod.t  extstore-overdel.t  extstore-tiered.t  extstore-tiered2.t  extstore.t  (+144 more)
test/: 00-startup.t  64bit.t  delete-window.t  expirations.t  flush-all.t  getset.t  incrdecr.t  multiversioning.t  stress-memcached.pl
testsuite/: basic_engine_testsuite.c
utilities/: config_parser.c  engine_loader.c  engine_loader.h  extension_loggers.c  genhash.c  util.c
win32/: Makefile.mingw  config.h  config.sh  defs.c  dlfcn.c  dlfcn.h  ntservice.c  ntservice.h  sysexits.h  win32.c  win32.h
(+3847 files in other folders)
